crates/scorecard/tests/trybuild/red_without_detail_must_fail.stderr
error[E0061]: this function takes 5 arguments but 4 arguments were supplied
  --> tests/trybuild/red_without_detail_must_fail.rs:17:16
   |
17 |     let _row = Row::coverage_delta_red(common, -4.2, "-4.2 pp".to_string(), Breakouts::default());
   |                ^^^^^^^^^^^^^^^^^^^^^^^----------------------------------------------------------- argument #5 of type `String` is missing
   |
note: associated function defined here
  --> src/lib.rs
   |
   |     pub fn coverage_delta_red(
   |            ^^^^^^^^^^^^^^^^^^
help: provide the argument
   |
17 |     let _row = Row::coverage_delta_red(common, -4.2, "-4.2 pp".to_string(), Breakouts::default(), /* String */);
   |                                                                                                 ++++++++++++++
